# genun-certification

./: Cargo.toml  Certification.sol  README.md  build.sh  deploy.sh  dfx.json
src/genun_backend/: Cargo.toml  genun_backend.did
src/genun_backend/src/: lib.rs
src/icrc7/: Cargo.toml  icrc7.did
src/icrc7/src/: lib.rs  state.rs  utils.rs
tests/: get_principal.sh  mint.sh  mintbatch.sh  remove.sh  test.sh  user.sh
wasm_files/: icrc7.wasm
